# Dlib-Cnn-based-webcam-detector

./: README.md  requirements.txt
Webcam_Custom/: CMakeLists.txt  readme.md  webcam.cpp
